# guitar_guy_public

./: CMakeLists.txt  README.md
assets/: song2.chart
assets/maps/: song1.chart  song3.chart
dev/map_creator/: map_creator.py  pyproject.toml
src/: cleanup.c  cleanup.h  draw.c  draw.h  game.c  game.h  gamestate.c  gamestate.h  init.c  init.h  loop.c  loop.h  main.c  map.c  map.h  scores.c  scores.h  types.c  types.h
